--- a/seo-app.html
+++ b/seo-app.html
@@ -1,382 +1,179 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SEO Metadata Generator</title>
 <style>
     body {
         font-family: Arial, sans-serif;
-        background: #2c2f36;
+        background-color: #2c2f36;
+        color: #f0f0f0;
         padding: 20px;
         min-height: 100vh;
-        color: #f0f0f0;
         display: flex;
         justify-content: center;
     }
-
-    .container {
-        max-width: 900px;
-        width: 100%;
-    }
-
-    h2, h3 {
-        color: #f0f0f0;
-    }
-
-    h3.single-title,
-    h3.batch-title {
-        color: #666;
-    }
-
-    input, textarea, button {
-        font-size: 16px;
-        padding: 10px;
-        width: 100%;
-        margin-bottom: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-    }
-
-    button {
-        background: #007bff;
-        color: white;
-        border: none;
-        cursor: pointer;
-        transition: 0.2s;
-    }
-
-    button:hover {
-        background: #0056b3;
-    }
-
-    .card {
-        background: #fff;
-        color: #000;
-        padding: 20px;
-        margin-bottom: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    .result-section {
-        margin-bottom: 15px;
-    }
-
-    .result-section h4 {
-        margin: 0 0 5px 0;
-        color: #333;
-    }
-
-    .result-section .editable {
-        margin: 0;
-        padding: 8px;
-        background: #f2f2f2;
-        border-radius: 5px;
-        min-height: 40px;
-        outline: none;
-        word-wrap: break-word;
-    }
-
-    .keywords {
-        background: #fffae6;
-        color: #b36b00;
-        font-weight: bold;
-    }
-
-    .pixelCounter {
-        font-size: 12px;
-        text-align: right;
-        color: #444;
-        margin-top: 4px;
-    }
-
-    .pixelCounter.over {
-        color: red;
-        font-weight: bold;
-    }
-
-    .copyBtn {
-        margin-top: 6px;
-        padding: 6px 10px;
-        width: auto;
-        font-size: 14px;
-        background: #28a745;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: 0.2s;
-    }
-
-    .copyBtn.copied {
-        background: #1f7e34;
-        color: #fff;
-    }
-
-    .pixel-inputs {
-        display: flex;
-        gap: 10px;
-        margin-bottom: 10px;
-    }
-
-    .pixel-inputs input {
-        flex: 1;
-    }
-
-    .pixel-label {
-        font-size: 14px;
-        color: #333;
-        margin-bottom: 4px;
-    }
+    .container { max-width: 900px; width: 100%; }
+    h2, h3 { color: #ffffff; font-weight: bold; }
+    .card { background-color: #1e1e1e; color: #f0f0f0; padding: 20px; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.5); }
+    input, textarea, button { font-size: 16px; padding: 10px; width: 100%; margin-bottom: 10px; border-radius: 5px; border: 1px solid #333; box-sizing: border-box; background-color: #2a2a2a; color: #f0f0f0; }
+    button.generateBtn { background: #007bff; color: white; font-weight: bold; border: none; cursor: pointer; transition: 0.2s; }
+    button.generateBtn:hover { background: #0056b3; }
+    .copyBtn { margin-top: 6px; padding: 6px 12px; font-size: 14px; background: #28a745; border-radius: 5px; cursor: pointer; transition: 0.2s; display: inline-block; }
+    .copyBtn.copied { background: #1f7e34; color: #fff; }
+    .pixel-inputs { display: flex; gap: 10px; margin-bottom: 12px; }
+    .pixel-label { font-size: 14px; color: #ccc; margin-bottom: 4px; }
+    .result-field { margin-top: 10px; padding: 10px; background-color: #111; border-radius: 5px; font-weight: bold; white-space: pre-wrap; color: #f0f0f0; }
 </style>
 </head>
 <body>
 <div class="container">
-
 <h2>SEO Metadata Generator</h2>
 
-<!-- -------------------------- SINGLE TOPIC GENERATOR -------------------------- -->
-<div class="card">
-    <h3 class="single-title">Single Topic Generator</h3>
+<!-- SINGLE TOPIC GENERATOR -->
 
+<div class="card">
+    <h3>Single Topic Generator</h3>
     <input id="topic" placeholder="Topic" />
     <input id="descriptionInput" placeholder="Description" />
-
     <div class="pixel-inputs">
-        <div>
-            <div class="pixel-label">Title</div>
-            <input id="singleTitleLimit" type="number" value="580">
-        </div>
-        <div>
-            <div class="pixel-label">Description</div>
-            <input id="singleDescLimit" type="number" value="990">
-        </div>
+        <div><div class="pixel-label">Title</div><input id="singleTitleLimit" type="number" value="580"></div>
+        <div><div class="pixel-label">Description</div><input id="singleDescLimit" type="number" value="990"></div>
     </div>
-
-    <button onclick="generate()">Generate</button>
+    <button class="generateBtn" onclick="generate()">Generate</button>
     <div id="loadingSingle" style="display:none; color:#007bff; font-weight:bold;">Generating...</div>
     <div id="singleResult" class="card" style="display:none;"></div>
 </div>
 
-<!-- -------------------------- BATCH GENERATOR -------------------------- -->
+<!-- BATCH GENERATOR -->
+
 <div class="card">
-    <h3 class="batch-title">Batch Generate Topics</h3>
-
+    <h3>Batch Generate Topics</h3>
     <textarea id="topics" placeholder="Enter topics, one per line..." rows="6"></textarea>
-
     <div class="pixel-inputs">
-        <div>
-            <div class="pixel-label">Title</div>
-            <input id="batchTitleLimit" type="number" value="580">
-        </div>
-        <div>
-            <div class="pixel-label">Description</div>
-            <input id="batchDescLimit" type="number" value="990">
-        </div>
+        <div><div class="pixel-label">Title</div><input id="batchTitleLimit" type="number" value="580"></div>
+        <div><div class="pixel-label">Description</div><input id="batchDescLimit" type="number" value="990"></div>
     </div>
-
-    <button onclick="generateAll()">Generate All</button>
-    <button onclick="downloadCSV()">Download CSV</button>
+    <button class="generateBtn" onclick="generateAll()">Generate All</button>
+    <button class="generateBtn" onclick="downloadCSV()">Download CSV</button>
     <div id="loadingBatch" style="display:none; color:#007bff; font-weight:bold;">Generating...</div>
     <div id="allResults"></div>
 </div>
+</div>
 
 <script>
-// Estimate pixel width
-function calculatePixels(text) {
-    return Math.round(text.length * 7.2);
+const API_URL = '/generate';
+
+// Copy text helper
+function copyText(button, id) {
+    const textEl = document.getElementById(id);
+    if (!textEl) return;
+    const textToCopy = textEl.innerText || textEl.textContent || '';
+    navigator.clipboard.writeText(textToCopy.trim()).then(() => {
+        button.classList.add('copied');
+        setTimeout(() => button.classList.remove('copied'), 1000);
+    });
 }
 
-// Copy helper
-function copyText(button, text) {
-    navigator.clipboard.writeText(text);
-    button.classList.add("copied");
-    setTimeout(() => button.classList.remove("copied"), 700);
-}
-
-// Update pixel counter for editable divs
-function updatePixelCounter(div, counterId, limit) {
-    const px = calculatePixels(div.innerText);
-    const counter = document.getElementById(counterId);
-    counter.textContent = `${px}px / ${limit}px`;
-    counter.className = 'pixelCounter' + (px > limit ? ' over' : '');
-}
-
-// --------------------------- SINGLE GENERATE ------------------------------
+// Single topic generate
 async function generate() {
-    const topic = document.getElementById("topic").value.trim();
-    const descInput = document.getElementById("descriptionInput").value.trim();
-    if (!topic) return alert("Please enter a topic");
+    const topic = document.getElementById('topic').value.trim();
+    const descInput = document.getElementById('descriptionInput').value.trim();
+    const descLimit = parseInt(document.getElementById('singleDescLimit').value) || 990;
 
-    const titleLimit = parseInt(document.getElementById("singleTitleLimit").value);
-    const descLimit = parseInt(document.getElementById("singleDescLimit").value);
+    if (!topic) return alert('Enter a topic');
 
-    document.getElementById("loadingSingle").style.display = "block";
-    const resultDiv = document.getElementById("singleResult");
-    resultDiv.style.display = "none";
-    resultDiv.innerHTML = "";
+    document.getElementById('loadingSingle').style.display = 'block';
+    document.getElementById('singleResult').style.display = 'none';
 
     try {
-        const res = await fetch("/generate", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ topic, maxLength: 160, description: descInput })
+        const res = await fetch(API_URL, {
+            method: 'POST',
+            headers: {'Content-Type':'application/json'},
+            body: JSON.stringify({topic, maxLength: descLimit})
         });
-
         const data = await res.json();
+        document.getElementById('loadingSingle').style.display = 'none';
 
-        resultDiv.innerHTML = `
-            <div class="result-section">
-                <h4>Title</h4>
-                <div id="singleTitle" class="editable" contenteditable="true">${data.title}</div>
-                <div id="singleTitleCounter" class="pixelCounter"></div>
-                <button class="copyBtn" onclick="copyText(this, document.getElementById('singleTitle').innerText)">Copy Title</button>
-            </div>
+        const container = document.getElementById('singleResult');
+        container.style.display = 'block';
+        container.innerHTML = `
+            <div class="result-field" id="singleTitle">${data.title}</div>
+            <button class="copyBtn" onclick="copyText(this, 'singleTitle')">Copy Title</button>
 
-            <div class="result-section">
-                <h4>Description</h4>
-                <div id="singleDesc" class="editable" contenteditable="true">${data.description}</div>
-                <div id="singleDescCounter" class="pixelCounter"></div>
-                <button class="copyBtn" onclick="copyText(this, document.getElementById('singleDesc').innerText)">Copy Description</button>
-            </div>
+            <div class="result-field" id="singleDescription">${data.description}</div>
+            <button class="copyBtn" onclick="copyText(this, 'singleDescription')">Copy Description</button>
 
-            <div class="result-section">
-                <h4>Keywords</h4>
-                <p class="keywords">${data.keywords}</p>
-            </div>
+            <div class="result-field" id="singleKeywords">${data.keywords}</div>
+            <button class="copyBtn" onclick="copyText(this, 'singleKeywords')">Copy Keywords</button>
         `;
-
-        const titleDiv = document.getElementById("singleTitle");
-        const descDiv = document.getElementById("singleDesc");
-
-        function updateSingleCounters() {
-            updatePixelCounter(titleDiv, "singleTitleCounter", titleLimit);
-            updatePixelCounter(descDiv, "singleDescCounter", descLimit);
-        }
-
-        titleDiv.addEventListener("input", updateSingleCounters);
-        descDiv.addEventListener("input", updateSingleCounters);
-        updateSingleCounters();
-
-        resultDiv.style.display = "block";
-    } catch (err) {
-        alert("Error generating");
-        console.error(err);
+    } catch(e) {
+        document.getElementById('loadingSingle').style.display = 'none';
+        alert('Error generating SEO data');
+        console.error(e);
     }
-
-    document.getElementById("loadingSingle").style.display = "none";
 }
 
-// ------------------------------ BATCH GENERATE ---------------------------
+// Batch generate
 async function generateAll() {
-    const topics = document.getElementById("topics").value
-        .split("\n").map(t => t.trim()).filter(t => t);
+    const topics = document.getElementById('topics').value.trim().split('\n').filter(t=>t);
+    const descLimit = parseInt(document.getElementById('batchDescLimit').value) || 990;
 
-    if (!topics.length) return alert("Please enter at least one topic");
+    if (!topics.length) return alert('Enter topics');
 
-    const titleLimit = parseInt(document.getElementById("batchTitleLimit").value);
-    const descLimit = parseInt(document.getElementById("batchDescLimit").value);
+    document.getElementById('loadingBatch').style.display = 'block';
+    const resultsDiv = document.getElementById('allResults');
+    resultsDiv.innerHTML = '';
+    const allResults = [];
 
-    const loading = document.getElementById("loadingBatch");
-    const allResultsDiv = document.getElementById("allResults");
-    allResultsDiv.innerHTML = "";
-    window.latestBatchResults = [];
-
-    loading.style.display = "block";
-
-    for (let i = 0; i < topics.length; i++) {
-        const topic = topics[i];
+    for (let topic of topics) {
         try {
-            const res = await fetch("/generate", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ topic, maxLength: 160 })
+            const res = await fetch(API_URL, {
+                method:'POST',
+                headers:{'Content-Type':'application/json'},
+                body: JSON.stringify({topic, maxLength: descLimit})
             });
-
             const data = await res.json();
-            window.latestBatchResults.push({ topic, ...data });
 
-            const card = document.createElement("div");
-            card.className = "card";
-            const cardId = i;
-
-            card.innerHTML = `
-                <h3>${topic}</h3>
-
-                <div class="result-section">
-                    <h4>Title</h4>
-                    <div id="batchTitle${cardId}" class="editable" contenteditable="true">${data.title}</div>
-                    <div id="batchTitleCounter${cardId}" class="pixelCounter"></div>
-                    <button class="copyBtn" onclick="copyText(this, document.getElementById('batchTitle${cardId}').innerText)">Copy Title</button>
-                </div>
-
-                <div class="result-section">
-                    <h4>Description</h4>
-                    <div id="batchDesc${cardId}" class="editable" contenteditable="true">${data.description}</div>
-                    <div id="batchDescCounter${cardId}" class="pixelCounter"></div>
-                    <button class="copyBtn" onclick="copyText(this, document.getElementById('batchDesc${cardId}').innerText)">Copy Description</button>
-                </div>
-
-                <div class="result-section">
-                    <h4>Keywords</h4>
-                    <p class="keywords">${data.keywords}</p>
-                </div>
+            const container = document.createElement('div');
+            container.className = 'card result-field';
+            container.innerHTML = `
+                <strong>${topic}</strong><br>
+                Title: ${data.title} <button class="copyBtn" onclick="navigator.clipboard.writeText('${data.title}')">Copy</button><br>
+                Description: ${data.description} <button class="copyBtn" onclick="navigator.clipboard.writeText('${data.description}')">Copy</button><br>
+                Keywords: ${data.keywords} <button class="copyBtn" onclick="navigator.clipboard.writeText('${data.keywords}')">Copy</button>
             `;
-
-            allResultsDiv.appendChild(card);
-
-            const titleDiv = document.getElementById(`batchTitle${cardId}`);
-            const descDiv = document.getElementById(`batchDesc${cardId}`);
-
-            function updateBatchCounters() {
-                updatePixelCounter(titleDiv, `batchTitleCounter${cardId}`, titleLimit);
-                updatePixelCounter(descDiv, `batchDescCounter${cardId}`, descLimit);
-            }
-
-            titleDiv.addEventListener("input", updateBatchCounters);
-            descDiv.addEventListener("input", updateBatchCounters);
-            updateBatchCounters();
-
-        } catch (err) {
-            console.error("Batch error:", err);
+            resultsDiv.appendChild(container);
+            allResults.push({topic, ...data});
+        } catch(e) {
+            console.error(e);
         }
     }
 
-    loading.style.display = "none";
+    document.getElementById('loadingBatch').style.display = 'none';
+    window.batchResults = allResults; // store for CSV
 }
 
-// ----------------------------- CSV DOWNLOAD -----------------------------
+// Download CSV
 function downloadCSV() {
-    if (!window.latestBatchResults || window.latestBatchResults.length === 0) {
-        alert("No results to download");
-        return;
-    }
+    if (!window.batchResults || !window.batchResults.length) return alert('No batch results');
 
-    const headers = ["Topic","Title","Description","Keywords"];
-    const csvRows = [headers.join(",")];
+    const headers = ['Topic','Title','Description','Keywords'];
+    const rows = window.batchResults.map(r => [r.topic,r.title,r.description,r.keywords]);
+    let csv = [headers.join(','), ...rows.map(r=>r.map(f=>`"${f.replace(/"/g,'""')}"`).join(','))].join('\n');
 
-    window.latestBatchResults.forEach(row => {
-        const values = [
-            `"${row.topic.replace(/"/g,'""')}"`,
-            `"${row.title.replace(/"/g,'""')}"`,
-            `"${row.description.replace(/"/g,'""')}"`,
-            `"${row.keywords.replace(/"/g,'""')}"`
-        ];
-        csvRows.push(values.join(","));
-    });
-
-    const csvContent = csvRows.join("\n");
-    const blob = new Blob([csvContent], { type: "text/csv" });
+    const blob = new Blob([csv], {type:'text/csv'});
     const url = URL.createObjectURL(blob);
-
-    const a = document.createElement("a");
+    const a = document.createElement('a');
     a.href = url;
-    a.download = "seo_results.csv";
+    a.download = 'seo_batch.csv';
+    document.body.appendChild(a);
     a.click();
-    URL.revokeObjectURL(url);
+    document.body.removeChild(a);
 }
 </script>
 
-</div>
 </body>
 </html>
